[package]
name = "encdec"
description = "binary object encoding / decoding helpers"
repository = "https://github.com/ryankurte/rust-encdec"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

[workspace]
members = [ "macros", "base" ]

[features]
heapless = [ "encdec-base/heapless" ]

[dependencies]

encdec-base = { version = "0.1", path = "./base" }
encdec-macros = { version = "0.1", path = "./macros" }

[dev-dependencies]
rand = "0.8.5"
