[package]
name = "encdec-base"
description = "encdec simple encoder/decoder base types and traits"
repository = "https://github.com/ryankurte/rust-encdec"
version = "0.9.0"
edition = "2021"
license = "MPL-2.0"

[features]
alloc = []
heapless = [ "dep:heapless" ]
std = [ "dep:thiserror" ]
nightly = []

default = [ "std", "alloc", "heapless" ]

[dependencies]
byteorder = { version = "1.4.3", default_features = false }
num-traits = { version = "0.2.15", default_features = false }

heapless = { version = "0.7.16", default_features = false, optional = true }
thiserror = { version = "1.0.35", default_features = false, optional = true  }
