[package]
name = "encdec"
description = "binary object encoding / decoding helpers"
repository = "https://github.com/ryankurte/rust-encdec"
version = "0.5.0"
edition = "2021"
license = "MPL-2.0"

[features]
heapless = [ "encdec-base/heapless" ]
std = [ "encdec-base/std" ]

[dependencies]

encdec-base = { version = "0.5.0", default_features = false }
encdec-macros = { version = "0.5.0" }

[dev-dependencies]
rand = "0.8.5"
