[package]
name = "encdec"
description = "binary object encoding / decoding helpers"
repository = "https://github.com/ryankurte/rust-encdec"
readme = "../README.md"
version = "0.6.2"
edition = "2021"
license = "MPL-2.0"

[features]
alloc = [ "encdec-base/alloc" ]
heapless = [ "encdec-base/heapless" ]
std = [ "encdec-base/std" ]

default = [ "std", "alloc", "heapless" ]

[dependencies]

encdec-base = { version = "=0.6.2", default_features = false }
encdec-macros = { version = "=0.6.2"}

[dev-dependencies]
rand = "0.8.5"
