[package]
name = "encdec-macros"
description = "encdec simple encoder/decoder derive macros"
repository = "https://github.com/ryankurte/rust-encdec"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

[lib]
proc-macro = true

[dependencies]
syn = "1.0.99"
quote = "1.0.21"

encdec-base = { path = "../base" }
