[package]
name = "encdec-macros"
description = "encdec simple encoder/decoder derive macros"
repository = "https://github.com/ryankurte/rust-encdec"
version = "0.7.1"
edition = "2021"
license = "MPL-2.0"

[lib]
proc-macro = true

[dependencies]
syn = "1.0.99"
quote = "1.0.21"
darling = "0.14.1"
proc-macro2 = "1.0.43"

encdec-base = { version = "^0.7.0"}
